--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@
 
 @font-face {
   font-family: "United Sans";
-  src:
-    local("United Sans Reg Medium"),
-    local("UnitedSansReg-Medium"),
+  src: local("United Sans Reg Medium"), local("UnitedSansReg-Medium"),
     url("../public/font/UnitedSansReg-Medium.woff2") format("woff2"),
     url("../public/font/UnitedSansReg-Medium.woff") format("woff");
   font-weight: 500;
@@ -16,9 +14,7 @@
 
 @font-face {
   font-family: "United Sans";
-  src:
-    local("United Sans Reg Heavy"),
-    local("UnitedSansReg-Heavy"),
+  src: local("United Sans Reg Heavy"), local("UnitedSansReg-Heavy"),
     url("../public/font/UnitedSansReg-Heavy.woff2") format("woff2"),
     url("../public/font/UnitedSansReg-Heavy.woff") format("woff");
   font-weight: 900;
@@ -28,9 +24,7 @@
 
 @font-face {
   font-family: "United Sans";
-  src:
-    local("United Sans Reg Light"),
-    local("UnitedSansReg-Light"),
+  src: local("United Sans Reg Light"), local("UnitedSansReg-Light"),
     url("../public/font/UnitedSansReg-Light.woff2") format("woff2"),
     url("../public/font/UnitedSansReg-Light.woff") format("woff");
   font-weight: 300;
@@ -40,9 +34,7 @@
 
 @font-face {
   font-family: "United Sans";
-  src:
-    local("United Sans Reg Bold"),
-    local("UnitedSansReg-Bold"),
+  src: local("United Sans Reg Bold"), local("UnitedSansReg-Bold"),
     url("../public/font/UnitedSansReg-Bold.woff2") format("woff2"),
     url("../public/font/UnitedSansReg-Bold.woff") format("woff");
   font-weight: bold;
@@ -52,9 +44,7 @@
 
 @font-face {
   font-family: "United Sans";
-  src:
-    local("United Sans Reg Black"),
-    local("UnitedSansReg-Black"),
+  src: local("United Sans Reg Black"), local("UnitedSansReg-Black"),
     url("../public/font/UnitedSansReg-Black.woff2") format("woff2"),
     url("../public/font/UnitedSansReg-Black.woff") format("woff");
   font-weight: 900;
@@ -126,8 +116,8 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 39, 39%, 69%;
+    --primary-foreground: 0 0% 0%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -153,8 +143,8 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 39, 39%, 69%;
+    --primary-foreground: 0 0% 0%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
@@ -175,20 +165,9 @@
 
   body {
     @apply bg-background text-foreground;
-    font-family:
-      "United Sans",
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      "Helvetica Neue",
-      Arial,
-      "Noto Sans",
-      sans-serif,
-      "Apple Color Emoji",
-      "Segoe UI Emoji",
-      "Segoe UI Symbol",
+    font-family: "United Sans", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
       "Noto Color Emoji";
   }
 }
